// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filter /> should render empty success response 1`] = `
.c1 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 18px;
  line-height: 26px;
}

.c0 {
  padding: 1rem;
  background-color: #f4f4f4;
  opacity: 1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
}

<div
  class="c0"
>
  <div
    class="c1 Typography-sc-1pie2ao-1"
    font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
    font-size="18px"
  >
    No Artwork found with that colour
  </div>
</div>
`;

exports[`<Filter /> should render loading state initially 1`] = `
.c0 {
  padding: 1rem;
  background-color: #f4f4f4;
  opacity: 0.1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
}

<div
  class="c0"
/>
`;

exports[`<Filter /> should render success response 1`] = `
.c6 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 0.75rem;
  line-height: 1rem;
  padding-top: 0.5rem;
}

.c7 {
  font-family: 'Adobe Garamond W08','adobe-garamond-pro','AGaramondPro-Regular','Times New Roman',Times,serif;
  font-size: 0.75rem;
  line-height: 1rem;
}

.c0 {
  padding: 1rem;
  background-color: #f4f4f4;
  opacity: 1;
  -webkit-transition: opacity 0.5s ease;
  transition: opacity 0.5s ease;
}

.c1 {
  display: grid;
  grid-row-gap: 1rem;
  grid-column-gap: 1rem;
  grid-template-columns: repeat(auto-fit,minmax(12.5rem,1fr));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c2 {
  height: 100%;
}

.c3 {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c3:focus {
  outline: 0.3125rem auto rgba(0,103,244,0.247);
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
  margin: 0;
  padding: 0;
}

.c5 {
  width: 100%;
  height: auto;
  max-height: 20rem;
  margin: auto;
  object-fit: contain;
}

<div
  class="c0"
>
  <ul
    class="c1"
  >
    <li
      class="c2"
    >
      <a
        aria-label="Butterflies "
        class="c3"
        href="/artwork/yorgos-kypris-butterflies-1"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Butterflies ’, ca. 2000"
            class="c5"
            height="254"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=254&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FrnXaUB-ev-ebmcsOAUMazA%2Fmedium.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Butterflies 
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Bronze Fish"
        class="c3"
        href="/artwork/yorgos-kypris-bronze-fish"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Bronze Fish’, ca. 2000"
            class="c5"
            height="266"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=266&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FLgKzxAEZjwp_HuAyrPG3Dg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Bronze Fish
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Vortex Emigration"
        class="c3"
        href="/artwork/yorgos-kypris-vortex-emigration-2"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Vortex Emigration’, ca. 2000"
            class="c5"
            height="343"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=343&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FnOyoyEFhMFAPk72Lu0iHLw%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Vortex Emigration
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Bronze Fish"
        class="c3"
        href="/artwork/yorgos-kypris-bronze-fish-1"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Bronze Fish’, ca. 2010"
            class="c5"
            height="600"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=600&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FJMDYfB9MXKZrbzZ7cmtOSQ%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Bronze Fish
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Blue Macaw"
        class="c3"
        href="/artwork/alex-kypris-blue-macaw"
      >
        <figure
          class="c4"
        >
          <img
            alt="Alex Kypris, ‘Blue Macaw’, 2018"
            class="c5"
            height="537"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=537&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F64oIJXCfiG7uwipWuRrEHg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Alex Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Blue Macaw
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Traverse"
        class="c3"
        href="/artwork/tom-hammick-traverse"
      >
        <figure
          class="c4"
        >
          <img
            alt="Tom Hammick, ‘Traverse’, 2017"
            class="c5"
            height="610"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=610&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FLt3GZUlLe_i3hKyce202Qg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Tom Hammick
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Traverse
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Brown Pelican"
        class="c3"
        href="/artwork/alex-kypris-brown-pelican"
      >
        <figure
          class="c4"
        >
          <img
            alt="Alex Kypris, ‘Brown Pelican’, 2018"
            class="c5"
            height="564"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=564&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FEyddsQMKdG_Id3UsUukC6Q%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Alex Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Brown Pelican
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Keel-Billed Toucan"
        class="c3"
        href="/artwork/alex-kypris-keel-billed-toucan"
      >
        <figure
          class="c4"
        >
          <img
            alt="Alex Kypris, ‘Keel-Billed Toucan’, 2018"
            class="c5"
            height="563"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=563&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FXEU-8TL52DxSvtqEFv0ROQ%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Alex Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Keel-Billed Toucan
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="werkübersicht 1946 -1986 - print no. 05"
        class="c3"
        href="/artwork/leon-polk-smith-werkubersicht-1946-1986-print-no-05"
      >
        <figure
          class="c4"
        >
          <img
            alt="Leon Polk Smith, ‘werkübersicht 1946 -1986 - print no. 05’, 1986"
            class="c5"
            height="554"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=554&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FNlqZ9uFsZtBuZhpftxrzLw%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Leon Polk Smith
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              werkübersicht 1946 -1986 - print no. 05
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Inca tern"
        class="c3"
        href="/artwork/alex-kypris-inca-tern"
      >
        <figure
          class="c4"
        >
          <img
            alt="Alex Kypris, ‘Inca tern’, 2018"
            class="c5"
            height="566"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=566&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F2ZzdUlNq4bcuYVl5FzXVTQ%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Alex Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Inca tern
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Kingfisher"
        class="c3"
        href="/artwork/alex-kypris-kingfisher"
      >
        <figure
          class="c4"
        >
          <img
            alt="Alex Kypris, ‘Kingfisher’, 2018"
            class="c5"
            height="568"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=568&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FgBnsTS6Y33uZF5KViGhnzA%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Alex Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Kingfisher
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Saddle-billed stork"
        class="c3"
        href="/artwork/alex-kypris-saddle-billed-stork"
      >
        <figure
          class="c4"
        >
          <img
            alt="Alex Kypris, ‘Saddle-billed stork’, 2018"
            class="c5"
            height="568"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=568&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FWK63n2MxfGHsYAgZ-KK7Ig%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Alex Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Saddle-billed stork
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Oxidised City"
        class="c3"
        href="/artwork/yorgos-kypris-oxidised-city"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Oxidised City’, 2015"
            class="c5"
            height="267"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=267&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FY-AV6U-y1Gmy9Ll6zbysNQ%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Oxidised City
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Berkenbast #18 - vraag hem waar hij kwartier maakt"
        class="c3"
        href="/artwork/caroline-coolen-berkenbast-number-18-vraag-hem-waar-hij-kwartier-maakt"
      >
        <figure
          class="c4"
        >
          <img
            alt="Caroline Coolen, ‘Berkenbast #18 - vraag hem waar hij kwartier maakt’, 2017"
            class="c5"
            height="480"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=480&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F3qX0NZBr3n1QQqZVtLtqXg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Caroline Coolen
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Berkenbast #18 - vraag hem waar hij kwartier maakt
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Doraemon: Here We Go!"
        class="c3"
        href="/artwork/takashi-murakami-doraemon-here-we-go-2"
      >
        <figure
          class="c4"
        >
          <img
            alt="Takashi Murakami, ‘Doraemon: Here We Go!’, 2020"
            class="c5"
            height="456"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=456&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FX_QtmoxojaElexHjPlKTbg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Takashi Murakami
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Doraemon: Here We Go!
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Fish in the net"
        class="c3"
        href="/artwork/yorgos-kypris-fish-in-the-net"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Fish in the net’, 2013"
            class="c5"
            height="538"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=538&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F_OBJKNcr67g4gGrpqStefw%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Fish in the net
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Vortex"
        class="c3"
        href="/artwork/yorgos-kypris-vortex-30"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Vortex’, 2015"
            class="c5"
            height="406"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=406&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F5LVfXRXmexkSc8WP5kzQtw%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Vortex
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Butterflies "
        class="c3"
        href="/artwork/yorgos-kypris-butterflies-2"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Butterflies ’, ca. 2000"
            class="c5"
            height="265"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=265&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F5ksG7m1GzCrrZB08-6twRA%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Butterflies 
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Ceremonial boat"
        class="c3"
        href="/artwork/yorgos-kypris-ceremonial-boat-6"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Ceremonial boat’, 2017"
            class="c5"
            height="181"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=181&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FXr7gWeNoMxYXLTGsGJBE2w%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Ceremonial boat
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Frozen Fish"
        class="c3"
        href="/artwork/yorgos-kypris-frozen-fish-7"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Frozen Fish’, 2018"
            class="c5"
            height="194"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=194&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FgCG7rHzBchBZQWDfm0cDwQ%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Frozen Fish
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Frozen Fish"
        class="c3"
        href="/artwork/yorgos-kypris-frozen-fish-9"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Frozen Fish’, 2018"
            class="c5"
            height="201"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=201&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FLKGKgy9bwIglVcGfFlq7XA%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Frozen Fish
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Indigogo 1"
        class="c3"
        href="/artwork/stacey-gillian-abe-indigogo-1"
      >
        <figure
          class="c4"
        >
          <img
            alt="Stacey Gillian Abe, ‘Indigogo 1’, 2018"
            class="c5"
            height="266"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=266&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FNz2AKzP7Up4qhqvKAhJ_aQ%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Stacey Gillian Abe
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Indigogo 1
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Diving Fish"
        class="c3"
        href="/artwork/yorgos-kypris-diving-fish-1"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Diving Fish’, 2017"
            class="c5"
            height="228"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=228&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F2wgebQh0tvBImyDmIiBGqg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Diving Fish
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Muscle Exercices"
        class="c3"
        href="/artwork/yorgos-kypris-muscle-exercices-1"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Muscle Exercices’, 2007"
            class="c5"
            height="600"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=600&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FNFEvAnSD8RprIYbow4gr7g%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Muscle Exercices
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Vortex"
        class="c3"
        href="/artwork/yorgos-kypris-vortex-33"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Vortex’, 2017"
            class="c5"
            height="409"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=409&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FqUOOF__wqb7vN-L2ShVjGw%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Vortex
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Easy game-2"
        class="c3"
        href="/artwork/tetiana-malinovska-easy-game-2"
      >
        <figure
          class="c4"
        >
          <img
            alt="Tetiana Malinovska, ‘Easy game-2’, 2015"
            class="c5"
            height="357"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=357&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FL_rwIYe4wQcGoDr-0zGQLA%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Tetiana Malinovska
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Easy game-2
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Helias ring "
        class="c3"
        href="/artwork/ariadni-kypri-helias-ring"
      >
        <figure
          class="c4"
        >
          <img
            alt="Ariadni Kypri, ‘Helias ring ’, 2019"
            class="c5"
            height="225"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=225&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2F74isrT3aKdaVIkc-hkKGmg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Ariadni Kypri
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Helias ring 
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Nicolas Ring "
        class="c3"
        href="/artwork/ariadni-kypri-nicolas-ring"
      >
        <figure
          class="c4"
        >
          <img
            alt="Ariadni Kypri, ‘Nicolas Ring ’, 2019"
            class="c5"
            height="225"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=225&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FgZyCZx4JhSUYwpKKUIEP6w%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Ariadni Kypri
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Nicolas Ring 
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Hemispheres"
        class="c3"
        href="/artwork/serena-scapagnini-hemispheres"
      >
        <figure
          class="c4"
        >
          <img
            alt="Serena Scapagnini, ‘Hemispheres’, 2013"
            class="c5"
            height="225"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=225&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FoOcJrALfRhpMxWBBlJhNfg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Serena Scapagnini
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Hemispheres
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
    <li
      class="c2"
    >
      <a
        aria-label="Entrapped Fish"
        class="c3"
        href="/artwork/yorgos-kypris-entrapped-fish-4"
      >
        <figure
          class="c4"
        >
          <img
            alt="Yorgos Kypris, ‘Entrapped Fish’, ca. 2000"
            class="c5"
            height="392"
            src="https://d7hftxdivxxvm.cloudfront.net?resize_to=fit&width=400&height=392&quality=80&src=https%3A%2F%2Fd32dm0rphc51dk.cloudfront.net%2FvzxWMUzlgctEvHw2HU_xMg%2Flarge.jpg"
            width="400"
          />
          <figcaption>
            <div
              class="c6 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
            >
              <strong>
                Yorgos Kypris
              </strong>
            </div>
            <div
              class="c7 Typography-sc-1pie2ao-1"
              font-family="'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', Times, serif"
              font-size="0.75rem"
              style="text-overflow: ellipsis; white-space: nowrap; overflow: hidden;"
            >
              Entrapped Fish
            </div>
          </figcaption>
        </figure>
      </a>
    </li>
  </ul>
</div>
`;
